--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -21,7 +21,8 @@
 
 @import "controls/dropdown.less";
 @import "controls/toggleButton.less";
-@import "controls/dateTimePicker.less";
+@import "controls/dateTimePicker/index.less";
+@import "controls/dateTimePicker/timepicker-seconds.less";
 @import "controls/fileBox.less";
 
 @import "controls/stackPanel.less";
@@ -39,13 +40,14 @@
 @import "controls/tabPanel.less";
 @import "controls/panel.less";
 @import "controls/dataGrid.less";
-@import "controls/dateTimePicker/index.less";
 
 @import "controls/imageBox.less";
 @import "controls/view.less";
 
 
 @import "controls/dataNavigation";
+
+@import "controls/divider";
 
 @import (optional) "@{pl-extension-path}";
 
