--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,4 +1,4 @@
-﻿// переменные путей до некоторых файлов
+// переменные путей до некоторых файлов
 @pl-override-platform-variables-path: "some.less";
 @pl-override-bootstrap-variables-path: "some.less";
 @pl-bootstrap-theme-path: "../../bootstrap-framework/less/theme.less";
