--- a/app/styles/controls/dataGrid.less
+++ b/app/styles/controls/dataGrid.less
@@ -22,7 +22,7 @@
     right: 5px;
     top: calc(~"50% - 10px");
     display: inline-block;
-    font-family: FontAwesome;
+    font-family: "FontAwesome";
   }
 
   .headerTemplate-sorted-asc:after {
@@ -36,7 +36,7 @@
   .sorted-asc, .sorted-desc {
     span:after {
       display: inline-block;
-      font-family: FontAwesome;
+      font-family: "FontAwesome";
       margin-left: 5px;
     }
   }
@@ -128,7 +128,8 @@
 
 }
 
-.pl-datagrid.verticalAlignmentStretch {
+// for scroll
+.pl-datagrid {
 
   overflow-x: hidden;
 
