--- a/example/styles/platform/platform-variables.less
+++ b/example/styles/platform/platform-variables.less
@@ -2,13 +2,13 @@
 
 // colors
 @pl-transparent: transparent;
-@pl-primary1: #278F8F;
-@pl-primary2: #77C7C7;
-@pl-primary3: #0D5D5D;
+@pl-primary1: #999;
+@pl-primary2: #337ab7;
+@pl-primary3: #fff;
 
-@pl-accent1: #EF8F40;
-@pl-accent2: #F7C194;
-@pl-accent3: #9B5215;
+@pl-accent1: #f3f227;
+@pl-accent2: #f3f227;
+@pl-accent3: #f00;
 
 @pl-white: #fff;
 @pl-black: #000;
